--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,99 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+
+.buttons-container {
+	width: 260px;
+	height: 260px;
+	border: 3px solid black;
+	margin: 10px auto 0px auto;
+	border-radius: 50%;
+  /* border: '12px solid red'; */
+	position: relative;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+    background-color: rgb(214, 214, 214);
+    transition: transform ease-in-out 0.2s;
+}
+.center-circle {
+	width: 50%;
+	height: 50%;
+	background-color: rgb(90, 90, 90);
+	border-radius: inherit;
+  /* border: 2px solid red; */
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	color: white;
+	outline: none;
+	/* border: none; */
+}
+
+.menu-button {
+	position: absolute;
+	top: 0px;
+	height: 25%;
+	width: 50%;
+	display: flex;
+	justify-content: center;
+  /* border: 2px solid red; */
+	align-items: center;
+	border-radius: 37% 37% 0% 0%;
+	font-size: 30px;
+  border: none;
+	outline: none;
+	
+	background-color: transparent;
+	color: rgb(78, 78, 78);
+}
+.left-button {
+	position: absolute;
+	left: 0px;
+	width: 25%;
+	height: 50%;
+	display: flex;
+  /* border: 2px solid red; */
+	justify-content: center;
+	align-items: center;
+	border-radius: 37% 0% 0% 37%;
+	font-size: 30px;
+  border: none;
+	outline: none;
+	
+	background-color: transparent;
+	color: rgb(78, 78, 78);
+}
+.right-button {
+	position: absolute;
+	right: 0px;
+	width: 25%;
+	height: 50%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	border-radius: 0% 37% 37% 0%;
+	font-size: 30px;
+  border: none;
+	outline: none;
+	
+	background-color: transparent;
+	color: rgb(78, 78, 78);
+}
+.play-pause {
+	position: absolute;
+	bottom: 0px;
+	height: 25%;
+	width: 50%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	border-radius: 0px 0% 37% 37%;
+	font-size: 30px;
+	outline: none;	
+  border: none;
+	background-color: transparent;
+	color: rgb(78, 78, 78);
+}
