Added gesture method on the circular button container and added the zingtouch methods for gesture tracking, I have included the component did mount method here, this will help us in tracking the gesture, and I have explained the process in detail but certain class like the screen-menu is not available right now which will be added.

--- a/src/index.css
+++ b/src/index.css
@@ -13,14 +13,13 @@ code {
 }
 
 
-
+/* All Buttons related css is here. */
 .buttons-container {
 	width: 260px;
 	height: 260px;
 	border: 3px solid black;
 	margin: 10px auto 0px auto;
 	border-radius: 50%;
-  /* border: '12px solid red'; */
 	position: relative;
 	display: flex;
 	justify-content: center;
