--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,38 @@
 body {
   margin: 0;
+  height: 98vh;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-image:  linear-gradient(to bottom, rgba(245, 246, 252, 0.52), rgba(210, 253, 131, 0.73)), url("background.jpg");
+  background-size: cover;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+/* The global App container - */
+.App {
+	margin: 1% auto 0px auto;
+	width: min-content;
+	/* IMPORTANT : This property is used to get us the maximum of all the contents inside the App container, then the width will be calculated as per it, just bigger than this. */
+	padding: 20px 10px 5px 10px;
+	border-radius: 20px;
+	background-image: url("https://img.freepik.com/free-vector/gradient-colorful-technology-background_52683-74698.jpg?w=1380&t=st=1663853972~exp=1663854572~hmac=799dfce1f3f7538fd75f7087f5aa76dabd1fcb90c03f35af8ebc182bf6dc4c46");
+	box-shadow: 0px 0px 12px 2px black;
+    background-size: cover;
+    position:relative;
+    transition: transform ease-in-out 0.2s;
+}
+
+
+
+
 
 
 /* All Buttons related css is here. */
