--- a/src/index.css
+++ b/src/index.css
@@ -281,3 +281,22 @@ code {
 .selected-song {
 	background-color: #45bd21;
 }
+
+
+
+/* The following class is going to work in the case when the music starts playing, then the tutton-container has an infinite loop of change in colors.  */
+.colored {
+    transition:background-color ease-in-out 0.2s;
+	animation-name: background-gradient-animation;
+	animation-duration: 5s;
+	animation-timing-function: ease-in-out;
+	animation-iteration-count: infinite;
+	color: white;
+    opacity: 0.9;
+}
+.colored svg {
+	color: white;
+}
+.colored .center-circle {
+	background-color: black;
+}
